docs: update description of paragraph about me

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
   <body>
     <h1>Hello RsSchool</h1>
     <p>my name is soso</p>
+    <p>i am 20 years old</p>
+    <p>im a student</p>
   </body>
 </html>
