--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <main>
         <h1>Soso Jajanidze</h1>
-        <img src="your-photo.jpg" alt="Soso Jajanidze's photo">
+        <img src="cv-photo.jpg" alt="Soso Jajanidze's photo">
 
         <section id="contact">
             <h2>Contact Information</h2>
@@ -107,7 +107,7 @@ console.log("The sum of " + number1 + " and " + number2 + " is: " + sum);
         <a href="https://github.com/sosojaja03">GitHub</a>
         <span>2024</span>
         <a href="https://rs.school">
-            <img src="rs_school_logo.svg" alt="RS School">
+            <img src="rs-school-logo.svg" alt="RS School">
         </a>
     </footer>
 </body>
